<resources>
    <string name="app_name">RobotArm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_logo_desc">Логотип RobotArm</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title_mods">Режимы работы</string>
    <string name="menu_title_app">Приложение</string>
    <string name="menu_program_control">Программное управление</string>
    <string name="menu_neural_network_control">Нейросетевое управление</string>
    <string name="menu_settings">Настройки</string>

    <string name="settings_tcp_socket_title">TCP подключение</string>
    <string name="settings_ip_address_hint">Адрес IP</string>
    <string name="settings_port_hint">Порт</string>
</resources>