<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/menu_title_mods">
        <menu>
            <item
                    android:id="@+id/nav_program_control"
                    android:icon="@drawable/ic_menu_program_control"
                    android:title="@string/menu_program_control"/>
            <item
                    android:id="@+id/nav_neural_network_control"
                    android:icon="@drawable/ic_menu_neural_network_control"
                    android:title="@string/menu_neural_network_control"/>
        </menu>
    </item>

    <item android:title="@string/menu_title_app">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_settings"/>
        </menu>
    </item>
</menu>